config/iptables/ip6tables.firewall.rules
*filter

#  Allow all loopback traffic
-A INPUT -s ::1 -d ::1 -j ACCEPT

# Allow Link-Local addresses same as 169.255.x.y
#-A INPUT -s fe80::/10 -j ACCEPT
#-A OUTPUT -s fe80::/10 -j ACCEPT

#  Accept all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#  Allow all outbound traffic - you can modify this to only allow certain traffic
-A OUTPUT -j ACCEPT

# Drop all invalid packets
-A INPUT -m state --state INVALID -j DROP

# Allow whitelisted ip sets
-A INPUT -m set --match-set WHITELIST_IP6 src,dst -j ACCEPT

# Block unwanted IPs/Nets via ipset
-A INPUT -m set --match-set BLACKLIST_IP6 src -j REJECT --reject-with icmp6-adm-prohibited
-A INPUT -m set --match-set BLACKLIST_NET6 src -j REJECT --reject-with icmp6-adm-prohibited

# Accept incoming and outgoing IPv6-in-IPv4 on interface eth0
#-A INPUT -i eth0 -p ipv6 -j ACCEPT 
#-A OUTPUT -o eth0 -p ipv6 -j ACCEPT 

# wireguard or tinc vpn tunnels
#-A INPUT -p tcp --dport 655 -j ACCEPT
#-A INPUT -p udp --dport 655 -j ACCEPT

# Drop martian packets, WARNING be sure not to block your local networks
# https://www.iana.org/assignments/ipv6-address-space/ipv6-address-space.xhtml
#-A INPUT -s fc00::/7 -j DROP
#-A INPUT -s fe80::/10 -j DROP
#-A INPUT -s 2001:2::/48 -j DROP
#-A INPUT -s 2001:db8::/32 -j DROP
#-A INPUT -s ff00::/8 -j DROP

# FTP
#-A INPUT -p tcp --dport 20 -j ACCEPT
#-A INPUT -p tcp --dport 21 -j ACCEPT
#-A INPUT -p tcp --dport 1221 -j ACCEPT
# FTP Passive mode
#-A INPUT -p tcp --sport 1024: --dport 36731:36792 -m state --state NEW,ESTABLISHED -j ACCEPT

# SFTP
#-A INPUT -p tcp --dport 1215 -j ACCEPT

# DNS
#-A INPUT -p tcp --dport 53 -j ACCEPT
#-A INPUT -p udp --dport 53 -j ACCEPT

# DHCP whe are not a bridge
-A INPUT -p udp --dport 67:68 -j REJECT
-A INPUT -p udp --dport 546:547 -j REJECT

#  Allow HTTP and HTTPS connections from anywhere (the normal ports for websites and SSL).
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# Nagios
#-A INPUT -p tcp -m tcp -s %%SERVERIP6%% --dport 5666 -j ACCEPT

# SMTP
#-A INPUT -p tcp --dport 25 -j ACCEPT
#-A INPUT -p tcp --dport 465 -j ACCEPT
#-A INPUT -p tcp --dport 587 -j ACCEPT
#-A INPUT -p tcp --dport 2525 -j ACCEPT

# POP3
#-A INPUT -p tcp --dport 110 -j ACCEPT
#-A INPUT -p tcp --dport 995 -j ACCEPT

# IMAP
#-A INPUT -p tcp --dport 143 -j ACCEPT
#-A INPUT -p tcp --dport 993 -j ACCEPT

#  Allow SSH connections
#  The -dport number should be the same port number you set in sshd_config
#
-A INPUT -p tcp -m state --state NEW --dport %%SSHDPORT%% -j ACCEPT

# Netbios (netservice, datagram service, session service, Directory services) / SAMBA
-A INPUT -p udp --dport 137:139 -j DROP
-A INPUT -p tcp --dport 139 -j DROP
-A INPUT -p udp --dport 445 -j DROP
-A INPUT -p tcp --dport 445 -j DROP
-A INPUT -p udp --dport 1900 -j DROP

# Disable DropBox y Spotify
-A INPUT -p udp --dport 17500 -j DROP
-A INPUT -p udp --dport 57621 -j DROP

# SNMP
#-A INPUT -p udp --dport 161:162 -j ACCEPT

#  Allow icmpv6
#-A INPUT -p ipv6-icmp --icmpv6-type 128 -j ACCEPT
-A INPUT -p icmpv6 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp6-adm-prohibited
-A INPUT --protocol icmpv6 --icmpv6-type echo-request -j ACCEPT --match limit --limit 30/minute

# Block null packets, syn-flood attacks and port scanning
-A INPUT -p tcp --tcp-flags ALL NONE -j DROP
-A INPUT -p tcp ! --syn -m state --state NEW -j DROP
-A INPUT -p tcp --tcp-flags ALL ALL -j DROP
# -I TCP -p tcp -m recent --update --seconds 60 --name TCP-PORTSCAN -j REJECT --reject-with tcp-rst
# -D INPUT -p tcp -j REJECT --reject-with tcp-rst
# -A INPUT -p tcp -m recent --set --name TCP-PORTSCAN -j REJECT --reject-with tcp-rst
# -I UDP -p udp -m recent --update --seconds 60 --name UDP-PORTSCAN -j REJECT --reject-with icmp-port-unreachable
# -D INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
# -A INPUT -p udp -m recent --set --name UDP-PORTSCAN -j REJECT --reject-with icmp-port-unreachable

# Port Scanners
-A INPUT -m state --state NEW -m set ! --match-set SCANNED_PORTS6 src,dst -m hashlimit --hashlimit-above 1/hour --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name portscan --hashlimit-htable-expire 7200 -j SET --add-set BLACKLIST_IP6 src --exist
-A INPUT -m state --state NEW -j SET --add-set SCANNED_PORTS6 src,dst

#  Log iptables denied calls
#-A INPUT -m limit --limit 5/min -j LOG --log-prefix "colmena ip6 denied: " --log-level 7
-A INPUT -j LOG --log-prefix "colmena ip6 denied: " --log-level 7

#  Reject all other inbound - default deny unless explicitly allowed policy
-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
