config/iptables/iptables.firewall.rules
*nat
# Some ISPs blocks port 25 to avoid SPAM so we can use 2525 to give users an alternative port
#-A PREROUTING -p tcp --dport 2525 -j REDIRECT --to-ports 25
COMMIT

*filter

#  Allow all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

#  Accept all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#  Allow all outbound traffic - you can modify this to only allow certain traffic
-A OUTPUT -j ACCEPT

# Drop all invalid packets
-A INPUT -m state --state INVALID -j DROP

# Allow whitelisted ip sets
-A INPUT -m set --match-set WHITELIST_IP src,dst -j ACCEPT

# Block unwanted IPs/Nets via ipset
-A INPUT -m set --match-set BLACKLIST_IP src -j REJECT --reject-with icmp-host-prohibited
-A INPUT -m set --match-set BLACKLIST_NET src -j REJECT --reject-with icmp-net-prohibited

# wireguard or tinc vpn tunnels
#-A INPUT -p tcp --dport 655 -j ACCEPT
#-A INPUT -p udp --dport 655 -j ACCEPT

# Drop martian packets, WARNING be sure not to block your local networks
# https://www.iana.org/assignments/iana-ipv4-special-registry/iana-ipv4-special-registry.xhtml
#-A INPUT -s 10.0.0.0/8 -j DROP
#-A INPUT -s 100.64.0.0/10 -j DROP
#-A INPUT -s 169.254.0.0/16 -j DROP
#-A INPUT -s 172.16.0.0/12 -j DROP
#-A INPUT -s 192.0.2.0/24 -j DROP
#-A INPUT -s 192.168.0.0/16 -j DROP
#-A INPUT -s 198.18.0.0/15 -j DROP
#-A INPUT -s 198.51.100.0/24 -j DROP
#-A INPUT -s 203.0.113.0/24 -j DROP

#Multicast-adresses.
#-A INPUT -s 224.0.0.0/4 -j DROP
#-A INPUT -d 224.0.0.0/4 -j DROP
#-A INPUT -s 240.0.0.0/5 -j DROP
#-A INPUT -d 240.0.0.0/5 -j DROP
#-A INPUT -s 0.0.0.0/8 -j DROP
#-A INPUT -d 0.0.0.0/8 -j DROP
#-A INPUT -d 239.255.255.0/24 -j DROP
#-A INPUT -d 255.255.255.255 -j DROP

# MYSQL
#-A INPUT -p tcp -m tcp -s %%SERVERIP4%% --dport 3306 -j ACCEPT

# FTP
#-A INPUT -p tcp -m tcp -s %%SERVERIP4%% --dport 20 -j ACCEPT
#-A INPUT -p tcp -m tcp -s %%SERVERIP4%% --dport 21 -j ACCEPT
#-A INPUT -p tcp --dport 21 -j ACCEPT
# FTP Passive mode
#-A INPUT -p tcp -m tcp -s %%SERVERIP4%% --sport 1024: --dport 36731:36792 -m state --state NEW,ESTABLISHED -j ACCEPT

# SFTP
#-A INPUT -p tcp --dport 1215 -j ACCEPT

# DNS
#-A INPUT -p tcp --dport 53 -j ACCEPT
#-A INPUT -p udp --dport 53 -j ACCEPT

# DHCP whe are not a bridge
-A INPUT -p udp --dport 67:68 -j REJECT
-A INPUT -p udp --dport 546:547 -j REJECT

#  Allow HTTP and HTTPS connections from anywhere (the normal ports for websites and SSL).
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# Nagios
#-A INPUT -p tcp -m tcp -s %%SERVERIP4%% --dport 5666 -j ACCEPT

# SMTP
#-A INPUT -p tcp --dport 25 -j ACCEPT
#-A INPUT -p tcp --dport 465 -j ACCEPT
#-A INPUT -p tcp --dport 587 -j ACCEPT
#-A INPUT -p tcp --dport 2525 -j ACCEPT

# POP3
#-A INPUT -p tcp --dport 110 -j ACCEPT
#-A INPUT -p tcp --dport 995 -j ACCEPT

# IMAP
#-A INPUT -p tcp --dport 143 -j ACCEPT
#-A INPUT -p tcp --dport 993 -j ACCEPT

#  Allow SSH connections
#  The -dport number should be the same port number you set in sshd_config
#
-A INPUT -p tcp -m state --state NEW --dport %%SSHDPORT%% -j ACCEPT

# Netbios (netservice, datagram service, session service, Directory services) / SAMBA, discovery
-A INPUT -p udp --dport 137:139 -j DROP
-A INPUT -p tcp --dport 139 -j DROP
-A INPUT -p udp --dport 445 -j DROP
-A INPUT -p tcp --dport 445 -j DROP
-A INPUT -p udp --dport 1900 -j DROP

# Disable DropBox y Spotify
-A INPUT -p udp --dport 17500 -j DROP
-A INPUT -p udp --dport 57621 -j DROP

# SNMP
#-A INPUT -p udp --dport 161:162 -j ACCEPT

#  Allow ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT --match limit --limit 30/minute

# Block null packets, syn-flood attacks and port scanning
-A INPUT -p tcp --tcp-flags ALL NONE -j DROP
-A INPUT -p tcp ! --syn -m state --state NEW -j DROP
-A INPUT -p tcp --tcp-flags ALL ALL -j DROP
# -I TCP -p tcp -m recent --update --seconds 60 --name TCP-PORTSCAN -j REJECT --reject-with tcp-rst
# -D INPUT -p tcp -j REJECT --reject-with tcp-rst
# -A INPUT -p tcp -m recent --set --name TCP-PORTSCAN -j REJECT --reject-with tcp-rst
# -I UDP -p udp -m recent --update --seconds 60 --name UDP-PORTSCAN -j REJECT --reject-with icmp-port-unreachable
# -D INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
# -A INPUT -p udp -m recent --set --name UDP-PORTSCAN -j REJECT --reject-with icmp-port-unreachable

# Port Scanners
-A INPUT -m state --state NEW -m set ! --match-set SCANNED_PORTS4 src,dst -m hashlimit --hashlimit-above 1/hour --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name portscan --hashlimit-htable-expire 7200 -j SET --add-set BLACKLIST_IP src --exist
-A INPUT -m state --state NEW -j SET --add-set SCANNED_PORTS4 src,dst

#  Log iptables denied calls
#-A INPUT -m limit --limit 5/min -j LOG --log-prefix "colmena ip4 denied: " --log-level 7
-A INPUT -j LOG --log-prefix "colmena ip4 denied: " --log-level 7

#  Reject all other inbound - default deny unless explicitly allowed policy
-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
